--- a/css/vertical.css
+++ b/css/vertical.css
@@ -4,31 +4,34 @@
 }
 
 /* IE 10+  https://stackoverflow.com/questions/43528940/how-to-detect-ie-and-edge-browsers-in-css*/
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { 
+
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
   #loremsition-vertical-1 {
     width: 200px;
-    position:absolute;
+    position: absolute;
   }
-   #loremsition-vertical-2 {
+  #loremsition-vertical-2 {
     width: 200px;
-    left : 200px;
-    position:absolute;
-   }
-   #loremsition-vertical-3 {
-    width: 200px;
-    left : 400px;
-    position:absolute;
+    left: 200px;
+    position: absolute;
   }
-   #loremsition-vertical-4 {
+  #loremsition-vertical-3 {
     width: 200px;
-    left : 600px;
-    position:absolute;
-   }
+    left: 400px;
+    position: absolute;
+  }
+  #loremsition-vertical-4 {
+    width: 200px;
+    left: 600px;
+    position: absolute;
+  }
 }
 
 .loremsition-vertical {
   display: block;
-  transform: translateZ(0); /* don't know if it helps */
+  transform: translateZ(0);
+  /* don't know if it helps */
   position: relative;
 }
 
@@ -36,13 +39,12 @@
   display: block;
   z-index: 1;
   margin: 5px;
-  transform: translateZ(0); /* don't know if it helps */
+  transform: translateZ(0);
+  /* don't know if it helps */
   position: relative;
-
 }
 
 .listItem {
-
   position: absolute;
   list-style: none;
   padding: 10px;
@@ -51,14 +53,14 @@
   width: 100%;
   line-height: 19px;
   border-radius: 1px;
- box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
-  
- transform: translateZ(0);  /* don't know if it helps */
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  transform: translateZ(0);
+  /* don't know if it helps */
   /* border-left: 2px solid #777; */
   /*text-align: justify;
     text-justify: inter-word;*/
-
 }
+
 /* 
 .trimText {
   text-overflow: ellipsis;
@@ -73,7 +75,6 @@
   /* font-style: italic; */
   left: -3px;
 }
-
 
 /*This (.numberToFont) causes randomly occurring  gaps between elements : */
 
@@ -93,4 +94,3 @@ span .blue {
   padding: 2px;
   opacity: 1;
 }
-
